# cpp-py-example

./: .gitignore  .gitlab-ci.yml  LICENSE  PITCHME.md  README.md
ex/: basic.py  class.py  gauss.py  gil.py  inheritance.py  mgrad.py  over.py  static.py  swap.py
src/: CMakeLists.txt  bitmap.cpp  bitmap.h  cimage.cpp  cimage.h  cproc.cpp  cproc.h  except.cpp  except.h  file.cpp  file.h  gil.h  proc.cpp  proc.h  python.cpp
